# sentrylens

./: .gitignore  AGENT_README.md  CLAUDE.md  CLUSTERING_DESIGN.md  README.md  STEP4_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  structure.txt
blog/: 2026-02-02-clustering-react-agent.md  README.md
configs/: settings.py
exploration/: download_aeri.sh  download_swebench.py  explore_clustering.ipynb  explore_data.ipynb  explore_stacktrace.py  parse_stacktrace.py
scripts/: analyze_clusters.py  cluster_errors.py  demo_agent.py  generate_embeddings.py  ingest_data.py
sentrylens/training/: data_preparation.py
src/sentrylens/: __init__.py  config.py
src/sentrylens/agent/: __init__.py  prompts.py  tools.py  triage_agent.py
src/sentrylens/api/: __init__.py  main.py
src/sentrylens/api/static/: index.html
src/sentrylens/cli/: __init__.py  agent.py  cluster.py  embed.py  ingest.py  main.py  pipeline.py  serve.py
src/sentrylens/clustering/: __init__.py  clusterer.py
src/sentrylens/core/: exceptions.py  models.py
src/sentrylens/embeddings/: embedder.py  vector_store.py
src/sentrylens/utils/: logger.py
tests/integration/: test_embedding_pipeline.py
tests/unit/: test_agent.py  test_clustering.py  test_embedder.py  test_models.py  test_tools.py  test_vector_store.py
