[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentrylens"
version = "0.1.0"
description = "Agentic AI system for error triage using Claude API"
readme = "CLAUDE.md"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=5.1.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "hnswlib>=0.7.0",
    "huggingface-hub>=0.36.0,<1.0",
    "hdbscan==0.8.33",
    "anthropic>=0.28.0",
    "python-dotenv==1.0.0",
    "typer[all]>=0.9.0",
]

[project.scripts]
sentrylens = "sentrylens.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
